// Interface for Adversaries (Observer)
interface Adversary {
    void update(Edibles edible); // The update method to be called by the Subject
}
