// Pacman class (not used in observer pattern, but can be expanded later)
class Pacman {
    // Pacman-related logic
}
